# Brainstorming-Lab

./: .gitignore  README.txt
.github/workflows/: stock-monitor.yml
budget-app/: docker-compose.yml  package.json  server.js
budget-app/public/: index.html  style.css  sw.js
budget-app/public/js/: api.js  app.js  db.js  sync.js  utils.js
budget-app/public/js/components/: BudgetHome.js  Categories.js  DailyLog.js  Dashboard.js
finance/stock-monitor/: config.yaml  monitor.py  setup.md
launched/budget-app/: README.md
launched/ssbm-session-report/: README.md  pyproject.toml
launched/ssbm-session-report/session_dashboard/: cli.py  export.py  gui.py  kpis.py  parse.py  slippi_api.py  stats.py
sketchpad/: README.md  index.html  manifest.json  style.css  sw.js
sketchpad/js/: app.js  backgrounds.js  canvas.js  pdf.js  storage.js  svg.js
ssbm/session-dashboard/: README.md  SessionDashboard.spec  pyproject.toml
ssbm/session-dashboard/dashboard/: SessionDashboard.twb
ssbm/session-dashboard/session_dashboard/: cli.py  export.py  gui.py  kpis.py  parse.py  report.py  slippi_api.py  stats.py
