[project]
name = "session-dashboard"
version = "0.1.0"
description = "Slippi replay analysis dashboard — per-character KPIs and Tableau exports"
requires-python = ">=3.11"
dependencies = [
    "peppi-py>=0.6.0",
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["session_dashboard*"]

[project.scripts]
session-dashboard = "session_dashboard.cli:main"
